99_ARCHIVE/bridge/base/0-admin-namespace.yaml
#! 0-admin-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: admin
    labels:
        com.docker.compose.project: admin
