99_ARCHIVE/bridge/base/n8n-deployment.yaml
#! n8n-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: n8n
    namespace: admin
    labels:
        com.docker.compose.project: admin
        com.docker.compose.service: n8n
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: admin
            com.docker.compose.service: n8n
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: admin
                com.docker.compose.service: n8n
                com.docker.compose.network.default: "true"
        spec:
            restartPolicy: Always
            containers:
                - name: n8n
                  image: n8nio/n8n:latest
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: n8n-5678
                      containerPort: 5678
                  volumeMounts:
                    - name: home-node--n8n
                      mountPath: /home/node/.n8n
            volumes:
                - name: home-node--n8n
                  hostPath:
                    path: C:\Users\admin\n8n-data
