99_ARCHIVE/bridge/base/n8n-service.yaml
# check if there is at least one published port

#! n8n-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: n8n-published
    namespace: admin
    labels:
        com.docker.compose.project: admin
        com.docker.compose.service: n8n
spec:
    selector:
        com.docker.compose.project: admin
        com.docker.compose.service: n8n
    ports:
        - name: n8n-5678
          port: 5678
          protocol: TCP
          targetPort: n8n-5678
